[gd_scene load_steps=9 format=3 uid="uid://bqu5klpl4tfr5"]

[ext_resource type="Script" path="res://Scripts/menu/game_over.gd" id="1_bj7er"]
[ext_resource type="FontFile" uid="uid://gh3mknrglbsr" path="res://Resources/font/The Wild Breath of Zelda.otf" id="1_gmnsw"]
[ext_resource type="Script" path="res://Scripts/menu/GameOver/try_again.gd" id="3_aitvt"]
[ext_resource type="FontFile" uid="uid://plk2ssnqqgfy" path="res://Resources/font/MotionControl-Bold.otf" id="3_gulbk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xkcvl"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Theme" id="Theme_8gvmh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5soiw"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e20lc"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_bj7er")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_top = 1.0
offset_right = 1153.0
offset_bottom = 647.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xkcvl")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 194.0
offset_right = 839.0
offset_bottom = 518.0
theme = SubResource("Theme_8gvmh")

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_gmnsw")
theme_override_font_sizes/font_size = 60
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Main" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="TryAgain" type="Button" parent="MarginContainer/Main"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_gulbk")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_5soiw")
text = "Try Again"
script = ExtResource("3_aitvt")

[node name="Quit" type="Button" parent="MarginContainer/Main"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_gulbk")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_e20lc")
text = "Quit"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "Version 1.0.0"
horizontal_alignment = 1

[node name="copyright" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "Copyrighted Â© PorthrisNaagu, 2024 "
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/Main/TryAgain" to="." method="_on_try_again_pressed"]
[connection signal="pressed" from="MarginContainer/Main/Quit" to="." method="_on_quit_pressed"]
